force-app/main/default/objects/Contact/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>222</length>
    <type>Text</type>
</CustomField>