force-app/main/default/objects/Contact/fields/Stripe_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Id__c</fullName>
    <description>Stores the Stripe customer identifier linked to this contact.</description>
    <label>Stripe Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>